fixed padding issue. still need to align content items with inline header

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -66,7 +66,6 @@ body {
   border: 1px solid #ccc;
   display: none;
   text-align: center;
-  padding: 2px 5px;
   -moz-box-shadow: 1px 1px 1px #ccc;
   -webkit-box-shadow: 1px 1px 1px #ccc;
   box-shadow: 1px 1px 1px #ccc;
